--- a/Renderer/Renderer.vcxproj.filters
+++ b/Renderer/Renderer.vcxproj.filters
@@ -73,6 +73,12 @@
     <Filter Include="源文件\OfflineTaskHelper">
       <UniqueIdentifier>{dcf5abf5-2edf-4349-b87e-aa24d75c9937}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\Renderer\Terrain">
+      <UniqueIdentifier>{3df561c6-2735-4408-a4b2-8dccd9b8173f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\Renderer\Terrain">
+      <UniqueIdentifier>{8491f98a-89b1-4441-a221-8ae70b88f327}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BuddyHeapAllocator.h">
@@ -237,6 +243,12 @@
     <ClInclude Include="FoliagePass.h">
       <Filter>头文件\Renderer\RenderPass</Filter>
     </ClInclude>
+    <ClInclude Include="Terrain.h">
+      <Filter>头文件\Renderer\Terrain</Filter>
+    </ClInclude>
+    <ClInclude Include="OpaquePass.h">
+      <Filter>头文件\Renderer\RenderPass</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BuddyHeapAllocator.cpp">
@@ -396,6 +408,12 @@
       <Filter>源文件\OfflineTaskHelper</Filter>
     </ClCompile>
     <ClCompile Include="FoliagePass.cpp">
+      <Filter>源文件\Renderer\RenderPass</Filter>
+    </ClCompile>
+    <ClCompile Include="Terrain.cpp">
+      <Filter>源文件\Renderer\Terrain</Filter>
+    </ClCompile>
+    <ClCompile Include="OpaquePass.cpp">
       <Filter>源文件\Renderer\RenderPass</Filter>
     </ClCompile>
   </ItemGroup>
