--- a/Renderer/Renderer.vcxproj
+++ b/Renderer/Renderer.vcxproj
@@ -166,12 +166,15 @@
     <ClInclude Include="GBufferPass.h" />
     <ClInclude Include="GPUData.h" />
     <ClInclude Include="GPUProfiler.h" />
+    <ClInclude Include="GrassPass.h" />
     <ClInclude Include="LinearBufferAllocator.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="MemoryAliasingHelper.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="GenerateCloudNoiseTask.h" />
     <ClInclude Include="OpaquePass.h" />
+    <ClInclude Include="PlaceObjectOnTerrainPass.h" />
+    <ClInclude Include="RenderObjectOnTerrainPass.h" />
     <ClInclude Include="RngSeedGenerationPass.h" />
     <ClInclude Include="SkyGenerationPass.h" />
     <ClInclude Include="TAAPass.h" />
@@ -233,11 +236,14 @@
     <ClCompile Include="GBufferPass.cpp" />
     <ClCompile Include="GenerateCloudNoiseTask.cpp" />
     <ClCompile Include="GPUProfiler.cpp" />
+    <ClCompile Include="GrassPass.cpp" />
     <ClCompile Include="LinearBufferAllocator.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="MemoryAliasingHelper.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="OpaquePass.cpp" />
+    <ClCompile Include="PlaceObjectOnTerrainPass.cpp" />
+    <ClCompile Include="RenderObjectOnTerrainPass.cpp" />
     <ClCompile Include="RngSeedGenerationPass.cpp" />
     <ClCompile Include="SkyGenerationPass.cpp" />
     <ClCompile Include="TAAPass.cpp" />
