--- a/Resources/Resources.vcxproj.filters
+++ b/Resources/Resources.vcxproj.filters
@@ -72,5 +72,14 @@
     <FxCompile Include="Shaders\Engine\GPUDrivenTerrain\TerrainRenderer_ForwardPlus.hlsl" />
     <FxCompile Include="Shaders\Engine\TAA\TAA_ForwardPlus.hlsl" />
     <FxCompile Include="Shaders\Engine\Base\ThreadGroupTilingX.hlsl" />
+    <FxCompile Include="Shaders\Engine\Foliage\FoliageRenderer_ForwardPlus.hlsl" />
+    <FxCompile Include="Shaders\Engine\ObjectOnTerrain\PlaceObjectOnTerrain.hlsl" />
+    <FxCompile Include="Shaders\Engine\ObjectOnTerrain\GrassRenderer.hlsl" />
+    <FxCompile Include="Shaders\Engine\ObjectOnTerrain\ObjectOnTerrainHelper.hlsl" />
+    <FxCompile Include="Shaders\Engine\ProceduralGrass\GrassBladeGenerator.hlsl" />
+    <FxCompile Include="Shaders\Engine\ProceduralGrass\GrassRenderer.hlsl" />
+    <FxCompile Include="Shaders\Engine\ProceduralGrass\GrassHelper.hlsl" />
+    <FxCompile Include="Shaders\Engine\ProceduralGrass\ClumpMapGenerator.hlsl" />
+    <FxCompile Include="Shaders\Engine\Math\Random.hlsl" />
   </ItemGroup>
 </Project>
