--- a/Resources/Resources.vcxproj.filters
+++ b/Resources/Resources.vcxproj.filters
@@ -81,5 +81,12 @@
     <FxCompile Include="Shaders\Engine\ProceduralGrass\GrassHelper.hlsl" />
     <FxCompile Include="Shaders\Engine\ProceduralGrass\ClumpMapGenerator.hlsl" />
     <FxCompile Include="Shaders\Engine\Math\Random.hlsl" />
+    <FxCompile Include="Shaders\Engine\ProceduralSky\SkyRenderer.hlsl" />
+    <FxCompile Include="Shaders\Engine\ProceduralSky\SkyHelper.hlsl" />
+    <FxCompile Include="Shaders\Engine\Atmosphere\Raymarching.hlsl" />
+    <FxCompile Include="Shaders\Engine\Atmosphere\Scattering.hlsl" />
+    <FxCompile Include="Shaders\Engine\Atmosphere\AtmosphereHelper.hlsl" />
+    <FxCompile Include="Shaders\Engine\Atmosphere\Atmosphere.hlsl" />
+    <FxCompile Include="Shaders\Engine\Atmosphere\Skybox.hlsl" />
   </ItemGroup>
 </Project>
