--- a/Renderer/Renderer.vcxproj
+++ b/Renderer/Renderer.vcxproj
@@ -176,12 +176,15 @@
     <ClInclude Include="GenerateCloudNoiseTask.h" />
     <ClInclude Include="OceanPass.h" />
     <ClInclude Include="OpaquePass.h" />
+    <ClInclude Include="PageTable.h" />
     <ClInclude Include="PlaceObjectOnTerrainPass.h" />
     <ClInclude Include="RenderObjectOnTerrainPass.h" />
     <ClInclude Include="RngSeedGenerationPass.h" />
+    <ClInclude Include="RuntimeVirtualTextureSystem.h" />
     <ClInclude Include="RvtPageLevelTable.h" />
     <ClInclude Include="RvtPageTable.h" />
     <ClInclude Include="RvtPageLevelTableCell.h" />
+    <ClInclude Include="RvtPhysicalTexture.h" />
     <ClInclude Include="RvtTiledTexture.h" />
     <ClInclude Include="SkyGenerationPass.h" />
     <ClInclude Include="SkyPass.h" />
@@ -218,6 +221,7 @@
     <ClInclude Include="TerrainPass.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="FixedTextureHelper.h" />
+    <ClInclude Include="TileCache.h" />
     <ClInclude Include="TileUpdater.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClInclude>
@@ -253,11 +257,14 @@
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="OceanPass.cpp" />
     <ClCompile Include="OpaquePass.cpp" />
+    <ClCompile Include="PageTable.cpp" />
     <ClCompile Include="PlaceObjectOnTerrainPass.cpp" />
     <ClCompile Include="RenderObjectOnTerrainPass.cpp" />
     <ClCompile Include="RngSeedGenerationPass.cpp" />
+    <ClCompile Include="RuntimeVirtualTextureSystem.cpp" />
     <ClCompile Include="RvtPageLevelTable.cpp" />
     <ClCompile Include="RvtPageTable.cpp" />
+    <ClCompile Include="RvtPhysicalTexture.cpp" />
     <ClCompile Include="RvtTiledTexture.cpp" />
     <ClCompile Include="SkyGenerationPass.cpp" />
     <ClCompile Include="SkyPass.cpp" />
@@ -295,6 +302,7 @@
     <ClCompile Include="TerrainPass.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="FixedTextureHelper.cpp" />
+    <ClCompile Include="TileCache.cpp" />
     <ClCompile Include="TileUpdater.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
