--- a/Renderer/Renderer.vcxproj.filters
+++ b/Renderer/Renderer.vcxproj.filters
@@ -79,6 +79,9 @@
     <Filter Include="头文件\Renderer\Terrain">
       <UniqueIdentifier>{f1734a5b-1928-4c53-b453-ada76f981bdd}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\Renderer\SoftwareVirtualTextureSystem">
+      <UniqueIdentifier>{215ae7ff-91c5-4369-87fc-5bc488b2f59e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BuddyHeapAllocator.h">
